# compu

./: Cargo.toml  README.md  azure-pipelines.yml  valgrind.supp
.github/workflows/: rust.yml
compu/: Cargo.toml
compu-brotli-sys/: .gitignore  Cargo.toml  build.rs
compu-brotli-sys/src/: lib.rs
compu/src/: compressor.rs  decompressor.rs  lib.rs  utils.rs  zlib_sys_wrap.rs
compu/src/compressor/: memory.rs  mod.rs  write.rs
compu/src/decoder/: brotli.rs  mod.rs  zlib.rs
compu/src/decompressor/: memory.rs  mod.rs  write.rs
compu/src/encoder/: brotli.rs  mod.rs  zlib.rs
compu/tests/: brotli.rs  zlib.rs
compu/tests/data/: 10x10y.compressed.deflate
src/: buffer.rs  lib.rs  mem.rs  utils.rs
src/compressor/: mod.rs
src/decoder/: brotli.rs  brotli_c.rs  mod.rs  zlib.rs  zlib_common.rs  zlib_ng.rs  zlib_rust.rs  zstd.rs
src/decompressor/: mod.rs
src/encoder/: brotli.rs  brotli_c.rs  brotli_common.rs  mod.rs  zlib.rs  zlib_common.rs  zlib_ng.rs  zlib_rust.rs  zstd.rs
tests/: decoder.rs  encoder.rs
tests/data/: 10x10y.compressed.zstd  alice29.txt.compressed.deflate
