[package]
name = "compu"
version = "1.2.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
keywords = ["brotli", "zstd", "zlib"]
categories = ["compression"]
description = "Rust Compression library with generic interface"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/compu"
documentation = "https://docs.rs/crate/compu"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies.compu-brotli-sys]
version = "1.1.0"
optional = true
default-features = false

[dependencies.libz-sys]
version = "1.1.9"
optional = true
default-features = false

[dependencies.libz-ng-sys]
version = "1.1.9"
optional = true
default-features = false

[dependencies.zstd-sys]
version = "2.0.8"
optional = true
default-features = false
# For advanced stream features (mostly for purpose of custom malloc)
features = ["experimental"]

[dependencies.brotli]
version = "3.5"
optional = true
default-features = false

[dependencies.bytes]
version = "1"
optional = true
default-features = false

[features]
default = []
brotli-rust = ["brotli"]
brotli-c = ["compu-brotli-sys"]
#Regular zlib bindings
zlib = ["libz-sys"]
zlib-static = ["libz-sys/static"]
#zlib-ng bindings (requires cmake)
zlib-ng = ["libz-ng-sys"]
#enables ZSTD
zstd = ["zstd-sys"]

[package.metadata.docs.rs]
features = ["zstd", "brotli-c", "brotli-rust", "zlib", "zlib-ng"]
