[package]
name = "compu-brotli-sys"
version = "0.1.3"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
keywords = ["brotli"]
description = "Bindings to brotli C library"
license = "Apache-2.0"
repository = "https://github.com/DoumanAsh/compu"
documentation = "https://docs.rs/crate/compu-brotli-sys"
exclude = [
    "/brotli/"
]

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies.bindgen]
version = "0.57"
optional = true

[build-dependencies]
cc = "1"

[features]
# Used internally to generate lib.rs
build-bindgen = ["bindgen"]
# To disable fetch of source code cuz docs.rs is retarded and blocks network
# Do not use it
docs = []

[package.metadata.docs.rs]
features = ["docs"]
