[package]
name = "compu"
version = "0.3.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
keywords = ["brotli"]
categories = ["compression"]
description = "Rust Compression library with generic interface"
license = "Apache-2.0"
repository = "https://github.com/DoumanAsh/compu"
documentation = "https://docs.rs/crate/compu"

[dependencies]
compu-brotli-sys = { version = "0.1", path = "../compu-brotli-sys/", optional = true }
cloudflare-zlib-sys = { version = "0.2", optional = true }

[features]
default = ["brotli-c", "zlib"]
brotli-c = ["compu-brotli-sys"]
zlib = ["cloudflare-zlib-sys"]
